@@ -45,7 +45,6 @@ import org.apache.kafka.common.protocol.Errors;
 
 import java.net.InetSocketAddress;
 import java.util.Collection;
-import java.util.Collections;
 import java.util.List;
 import java.util.Optional;
 import java.util.function.Consumer;
@@ -56,24 +55,16 @@ import java.util.stream.Collectors;
 public class RaftUtil {
 
     public static ApiMessage errorResponse(ApiKeys apiKey, Errors error) {
-        switch (apiKey) {
-            case VOTE:
-                return new VoteResponseData().setErrorCode(error.code());
-            case BEGIN_QUORUM_EPOCH:
-                return new BeginQuorumEpochResponseData().setErrorCode(error.code());
-            case END_QUORUM_EPOCH:
-                return new EndQuorumEpochResponseData().setErrorCode(error.code());
-            case FETCH:
-                return new FetchResponseData().setErrorCode(error.code());
-            case FETCH_SNAPSHOT:
-                return new FetchSnapshotResponseData().setErrorCode(error.code());
-            case API_VERSIONS:
-                return new ApiVersionsResponseData().setErrorCode(error.code());
-            case UPDATE_RAFT_VOTER:
-                return new UpdateRaftVoterResponseData().setErrorCode(error.code());
-            default:
-                throw new IllegalArgumentException("Received response for unexpected request type: " + apiKey);
-        }
+        return switch (apiKey) {
+            case VOTE -> new VoteResponseData().setErrorCode(error.code());
+            case BEGIN_QUORUM_EPOCH -> new BeginQuorumEpochResponseData().setErrorCode(error.code());
+            case END_QUORUM_EPOCH -> new EndQuorumEpochResponseData().setErrorCode(error.code());
+            case FETCH -> new FetchResponseData().setErrorCode(error.code());
+            case FETCH_SNAPSHOT -> new FetchSnapshotResponseData().setErrorCode(error.code());
+            case API_VERSIONS -> new ApiVersionsResponseData().setErrorCode(error.code());
+            case UPDATE_RAFT_VOTER -> new UpdateRaftVoterResponseData().setErrorCode(error.code());
+            default -> throw new IllegalArgumentException("Received response for unexpected request type: " + apiKey);
+        };
     }
 
     public static FetchRequestData singletonFetchRequest(
@@ -90,10 +81,10 @@ public class RaftUtil {
             new FetchRequestData.FetchTopic()
                 .setTopic(topicPartition.topic())
                 .setTopicId(topicId)
-                .setPartitions(Collections.singletonList(fetchPartition));
+                .setPartitions(List.of(fetchPartition));
 
         return new FetchRequestData()
-            .setTopics(Collections.singletonList(fetchTopic));
+            .setTopics(List.of(fetchTopic));
     }
 
     public static FetchResponseData singletonFetchResponse(
@@ -117,7 +108,7 @@ public class RaftUtil {
             new FetchResponseData.FetchableTopicResponse()
                 .setTopic(topicPartition.topic())
                 .setTopicId(topicId)
-                .setPartitions(Collections.singletonList(fetchablePartition));
+                .setPartitions(List.of(fetchablePartition));
 
         FetchResponseData response = new FetchResponseData();
 
@@ -138,7 +129,7 @@ public class RaftUtil {
 
         return response
             .setErrorCode(topLevelError.code())
-            .setResponses(Collections.singletonList(fetchableTopic));
+            .setResponses(List.of(fetchableTopic));
     }
 
     public static VoteRequestData singletonVoteRequest(
@@ -155,11 +146,11 @@ public class RaftUtil {
             .setClusterId(clusterId)
             .setVoterId(voterKey.id())
             .setTopics(
-                Collections.singletonList(
+                List.of(
                     new VoteRequestData.TopicData()
                         .setTopicName(topicPartition.topic())
                         .setPartitions(
-                            Collections.singletonList(
+                            List.of(
                                 new VoteRequestData.PartitionData()
                                     .setPartitionIndex(topicPartition.partition())
                                     .setReplicaEpoch(replicaEpoch)
@@ -202,10 +193,10 @@ public class RaftUtil {
 
         VoteResponseData response = new VoteResponseData()
             .setErrorCode(topLevelError.code())
-            .setTopics(Collections.singletonList(
+            .setTopics(List.of(
                 new VoteResponseData.TopicData()
                     .setTopicName(topicPartition.topic())
-                    .setPartitions(Collections.singletonList(partitionData))));
+                    .setPartitions(List.of(partitionData))));
 
         if (apiVersion >= 1) {
             Optional<InetSocketAddress> address = endpoints.address(listenerName);
@@ -250,10 +241,10 @@ public class RaftUtil {
             .setReplicaId(replicaKey.id())
             .setMaxBytes(maxBytes)
             .setTopics(
-                Collections.singletonList(
+                List.of(
                     new FetchSnapshotRequestData.TopicSnapshot()
                         .setName(topicPartition.topic())
-                        .setPartitions(Collections.singletonList(partitionSnapshot))
+                        .setPartitions(List.of(partitionSnapshot))
                 )
             );
     }
@@ -285,10 +276,10 @@ public class RaftUtil {
 
         FetchSnapshotResponseData response = new FetchSnapshotResponseData()
             .setTopics(
-                Collections.singletonList(
+                List.of(
                     new FetchSnapshotResponseData.TopicSnapshot()
                         .setName(topicPartition.topic())
-                        .setPartitions(Collections.singletonList(partitionSnapshot))
+                        .setPartitions(List.of(partitionSnapshot))
                 )
             );
 
@@ -323,11 +314,11 @@ public class RaftUtil {
             .setClusterId(clusterId)
             .setVoterId(voterKey.id())
             .setTopics(
-                Collections.singletonList(
+                List.of(
                     new BeginQuorumEpochRequestData.TopicData()
                         .setTopicName(topicPartition.topic())
                         .setPartitions(
-                            Collections.singletonList(
+                            List.of(
                                 new BeginQuorumEpochRequestData.PartitionData()
                                     .setPartitionIndex(topicPartition.partition())
                                     .setLeaderEpoch(leaderEpoch)
@@ -353,11 +344,11 @@ public class RaftUtil {
         BeginQuorumEpochResponseData response = new BeginQuorumEpochResponseData()
             .setErrorCode(topLevelError.code())
             .setTopics(
-                Collections.singletonList(
+                List.of(
                     new BeginQuorumEpochResponseData.TopicData()
                         .setTopicName(topicPartition.topic())
                         .setPartitions(
-                            Collections.singletonList(
+                            List.of(
                                 new BeginQuorumEpochResponseData.PartitionData()
                                     .setErrorCode(partitionLevelError.code())
                                     .setLeaderId(leaderId)
@@ -409,11 +400,11 @@ public class RaftUtil {
         return new EndQuorumEpochRequestData()
             .setClusterId(clusterId)
             .setTopics(
-                Collections.singletonList(
+                List.of(
                     new EndQuorumEpochRequestData.TopicData()
                         .setTopicName(topicPartition.topic())
                         .setPartitions(
-                            Collections.singletonList(
+                            List.of(
                                 new EndQuorumEpochRequestData.PartitionData()
                                     .setPartitionIndex(topicPartition.partition())
                                     .setLeaderEpoch(leaderEpoch)
@@ -439,10 +430,10 @@ public class RaftUtil {
     ) {
         EndQuorumEpochResponseData response = new EndQuorumEpochResponseData()
                    .setErrorCode(topLevelError.code())
-                   .setTopics(Collections.singletonList(
+                   .setTopics(List.of(
                        new EndQuorumEpochResponseData.TopicData()
                            .setTopicName(topicPartition.topic())
-                           .setPartitions(Collections.singletonList(
+                           .setPartitions(List.of(
                                new EndQuorumEpochResponseData.PartitionData()
                                    .setErrorCode(partitionLevelError.code())
                                    .setLeaderId(leaderId)
@@ -476,11 +467,11 @@ public class RaftUtil {
 
         return new DescribeQuorumRequestData()
             .setTopics(
-                Collections.singletonList(
+                List.of(
                     new DescribeQuorumRequestData.TopicData()
                         .setTopicName(topicPartition.topic())
                         .setPartitions(
-                            Collections.singletonList(
+                            List.of(
                                 new DescribeQuorumRequestData.PartitionData()
                                     .setPartitionIndex(topicPartition.partition())
                             )
@@ -501,11 +492,11 @@ public class RaftUtil {
     ) {
         DescribeQuorumResponseData response = new DescribeQuorumResponseData()
             .setTopics(
-                Collections.singletonList(
+                List.of(
                     new DescribeQuorumResponseData.TopicData()
                         .setTopicName(topicPartition.topic())
                         .setPartitions(
-                            Collections.singletonList(
+                            List.of(
                                 new DescribeQuorumResponseData.PartitionData()
                                     .setPartitionIndex(topicPartition.partition())
                                     .setErrorCode(Errors.NONE.code())
@@ -609,11 +600,9 @@ public class RaftUtil {
             .setLeaderEpoch(leaderAndEpoch.epoch());
 
         Optional<InetSocketAddress> address = endpoints.address(listenerName);
-        if (address.isPresent()) {
-            response.currentLeader()
-                .setHost(address.get().getHostString())
-                .setPort(address.get().getPort());
-        }
+        address.ifPresent(inetSocketAddress -> response.currentLeader()
+            .setHost(inetSocketAddress.getHostString())
+            .setPort(inetSocketAddress.getPort()));
 
         return response;
     }
